Revision history for Perl extension TAP::Formatter::JUnit.

{{$NEXT}}
    - Bump minimum required Perl to 5.010; XML::Generator v1.11 now requires
      that as a minimum acceptable Perl.

0.16      2022-05-14 21:50:19-07:00 America/Vancouver
    - Sigh... neglected to consider development versions of Test::Harness in the
      recent updates to "t/formatter.t"; although the fixes were released in
      v3.44, they were also present in the v3.43_* development versions.

0.15      2022-05-06 11:45:06-07:00 America/Vancouver
    - Use "version.pm" to compare version numbers, in "t/formatter.t".
      Addresses some CPANTester failures.

0.14      2022-04-30 12:36:14-07:00 America/Vancouver
    - Update "t/formatter.t" to accommodate fixes made in Test::Harness v3.44
      (most specifically w.r.t. the "bailout" test).  david-dot-krupicka++
      ppisar++ pghmcfc++

0.13      2021-05-04 10:04:17-07:00 America/Vancouver
    - Fix install of "script/tap2junit"

0.12      2021-01-05 21:23:07-08:00 America/Vancouver
    - Switch to Dist::Zilla for release management.
    - Various POD fixups; syntax, spelling, SYNOPSIS fixes
    - Cleaned up and removed unused variables
    - Bump minimum required Perl to 5.008, as that's the oldest version I can
      still test against.

0.11    Wed Oct  1 13:26 PDT 2014
    - Use "IPC::Run" instead of "IPC::Open2" in tests, to fix problems with
      tests freezing on Windows.

0.10    Mon Sep 29 12:38 PDT 2014
    - Switch from "Test::Differences" to "Test::XML", to eliminate failures due
      to differences in ordering of XML attributes.  Addresses RT#81552
    - Use "File::Spec->null()" to get proper path to NULL.  RT#81200, RT#82227.
    - Moved POD tests to "xt/" directory.
    - Move timing sensitive tests to "xt/" directory, as they can cause
      spurious failures for people.  While _I_ want to make sure they run
      successfully, that's about my checking functionality as opposed to